# MLServer

./: Dockerfile  Dockerfile.konflux  OWNERS  pyproject.toml  requirements.txt  rhoai-requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: create-and-bump-tag.yml  prow-merge-master-to-stable.yaml  prow-merge-release-to-staging.yml  security.yml  tests.yml
.tekton/: README.md  ml-server-poc-pull-request.yaml  ml-server-poc-push.yaml  odh-mlserver-rhel9-v3-3-pull-request.yaml  odh-mlserver-rhel9-v3-3-push.yaml  odh-mlserver-v3-3-pull-request.yaml  odh-mlserver-v3-3-push.yaml
docs/: conf.py
docs/testing/: TESTING_ENVIRONMENTS.md  TESTING_WITH_PODMAN.md
mlserver/: server.py
mlserver/parallel/: worker.py
runtimes/alibi-detect/: pyproject.toml
runtimes/alibi-detect/mlserver_alibi_detect/: version.py
runtimes/alibi-detect/tests/: conftest.py
runtimes/alibi-explain/: pyproject.toml
runtimes/alibi-explain/tests/: conftest.py
runtimes/catboost/: pyproject.toml
runtimes/huggingface/: pyproject.toml
runtimes/huggingface/tests/: conftest.py
runtimes/lightgbm/: pyproject.toml
runtimes/lightgbm/tests/: conftest.py
runtimes/mlflow/: pyproject.toml
runtimes/mlflow/mlserver_mlflow/: version.py
runtimes/mlflow/tests/: conftest.py
runtimes/mllib/: pyproject.toml
runtimes/sklearn/: pyproject.toml
runtimes/xgboost/: pyproject.toml
runtimes/xgboost/tests/: conftest.py
tests/: conftest.py  utils.py
tests/kafka/: conftest.py
tests/parallel/: test_registry.py  test_worker.py
tests/testdata/: environment.txt  environment.yml
(+1 files in other folders)
