[tool.poetry]
name = "mlserver-catboost"
version = "1.7.1+rhai5"
description = "Catboost runtime for MLServer"
authors = ["Theofilos Papapanagiotou <theofilos@gmail.com>"]
maintainers = ["Seldon Technologies Ltd. <hello@seldon.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "mlserver_catboost"}]

[tool.poetry.dependencies]
python = ">=3.14,<3.15"
catboost = "*"
joblib = "*"
mlserver = "*"

[tool.poetry.group.dev.dependencies]
mlserver = {path = "../..", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
